// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formInformation parses 1`] = `
Object {
  "caseNotes": Object {},
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [],
      "latestUaResults": Array [],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "crimeInformation": Array [
      Object {
        "caseNumber": "12858",
        "crimeName": "Shoplifting",
        "sentenceFTRD": 2023-08-11T00:00:00.000Z,
        "sentenceMax": "12 months",
        "sentenceMin": "3 months",
        "sentencingCounty": "Duane",
        "sentencingDate": 2022-08-12T00:00:00.000Z,
        "sentencingJudge": "Starla Murieta",
      },
      Object {
        "caseNumber": "13085",
        "crimeName": "Public Intoxication",
        "sentenceFTRD": 2023-07-30T00:00:00.000Z,
        "sentenceMax": "10 months",
        "sentenceMin": "2 months",
        "sentencingCounty": "Duane",
        "sentencingDate": 2022-09-30T00:00:00.000Z,
        "sentencingJudge": "Raymond Dart",
      },
    ],
    "currentFinesBalance": 12.18,
    "currentLsirDate": 2022-10-24T00:00:00.000Z,
    "currentLsirScore": 19,
    "currentRestitutionBalance": 0,
    "initialFines": 98.25,
    "initialLsirDate": 2020-03-28T00:00:00.000Z,
    "initialLsirScore": 27,
    "initialRestitution": 4289.63,
    "lastFinesPaymentDate": 2022-09-08T00:00:00.000Z,
    "lastRestitutionPaymentDate": 2022-08-09T00:00:00.000Z,
    "ncicCheckDate": 2022-11-10T00:00:00.000Z,
  },
  "stateCode": "US_ID",
}
`;

exports[`optional criteria have sane fallbacks 1`] = `
Object {
  "caseNotes": Object {},
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [],
      "latestUaResults": Array [],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {},
  "stateCode": "US_ID",
}
`;

exports[`transform dual/parole record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
    ],
  },
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": Array [
        false,
      ],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [
        2022-03-09T00:00:00.000Z,
      ],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {},
  "stateCode": "US_ID",
}
`;

exports[`transform probation record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
    ],
  },
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": Array [
        false,
      ],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [
        2022-03-09T00:00:00.000Z,
      ],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {},
  "stateCode": "US_ID",
}
`;
